# bibleTTS_syn_voices_generator

./: .gitignore  README.md  bibleTTS_syn_voice_generator.py  pyproject.toml
